Rework Cards section; Change Scrollbar, Fix scroll anchor links;

--- a/styles.css
+++ b/styles.css
@@ -111,92 +111,7 @@ input {
   background-size: cover;
 }
 
-.flip-card-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
 
-.flip-card {
-  background-color: transparent;
-  width: 33.33%;
-  height: 600px;
-  perspective: 5000px;
-}
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: rgba(255, 255, 255, 0);
-  padding: 5%;
-}
-
-.flip-card-back {
-  background-color: rgba(0, 0, 153, 0.877);
-  color: white;
-  transform: rotateY(180deg);
-  padding: 5%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.flip-card-back p {
-  padding-top: 50px !important;
-}
-
-@media screen and (max-width: 992px) {
-  .flip-card {
-    width: 80%;
-    height: 700px;
-  }
-
-  .flip-card-container {
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .flip-card {
-    width: 80%;
-    height: 600px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .flip-card {
-    width: 80%;
-    height: 500px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .flip-card {
-    width: 80%;
-    min-height: 800px;
-  }
-}
 
 
 
@@ -222,6 +137,7 @@ input {
   --fs-h1: 9rem;
   --fs-h1-sub: 1.5rem;
   --fs-h3-section-header: 3rem;
+  --fs-h4: 2rem;
 
   --fw-normal: 400;
   --fw-bold: 600;
@@ -234,6 +150,29 @@ input {
 
 body {
   overflow-x: hidden;
+}
+
+/* Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  background: #000000;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--clr-dark);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--clr-primary);
 }
 
 /* Basic Settings end*/
@@ -399,6 +338,8 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  border-bottom: 1px solid var(--clr-light);
 }
 
 .showcase::before {
@@ -509,21 +450,7 @@ body {
   margin-block: 50px;
 }
 
-/* About Us */
-
-/* Contact us */
-.section--contact {
-  padding-block: 5rem;
-}
-
-.bg_img--contacts {
-  background-image: url(./img/backgrounds/abstract_blue_2.png);
-  min-height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
+/* Backgrounds for main content section */
 .bg_img--products {
   position: relative;
 }
@@ -576,6 +503,24 @@ body {
   }
 }
 
+@keyframes fadeInOutReverse {
+  0% {
+    opacity: 1;
+  }
+  10% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .bg-img--background-1 {
   position: fixed;
 
@@ -611,7 +556,7 @@ body {
 
   z-index: -12;
 
-  animation: fadeInOut 7s linear infinite;
+  animation: fadeInOutReverse 5s linear infinite;
 }
 
 .bg-img--foreground {
@@ -628,6 +573,118 @@ body {
   background-size: cover;
 
   z-index: -5;
+}
+
+/* Backgrounds for main content section - end */
+
+/* About Us */
+/* About Us end*/
+
+/* Our Services */
+
+.cards-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+@media screen and (min-width: 35rem) {
+  .cards-container {
+    flex-direction: row;
+  }
+}
+
+.card {
+  color: white;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+
+  background-color: rgba(43, 43, 43, 0.1);
+
+  padding: 0 1rem 3rem 1rem;
+
+  position: relative;
+  border-radius: 1rem;
+}
+
+.card--1 {
+  background: rgb(155,66,89);
+  background: linear-gradient(25deg, rgba(155,66,89,0.25) 0%, rgba(155,66,89,0) 90%);
+}
+
+.card--2 {
+  background: rgb(35,54,142);
+  background: linear-gradient(0deg, rgba(35,54,142,0.25) 0%, rgba(35,54,142,0) 90%);
+}
+
+.card--3 {
+  background: rgb(156,51,0);
+  background: linear-gradient(-25deg, rgba(156,51,0,0.25) 0%, rgba(156,51,0,0) 90%);
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 1rem; 
+  padding: 1px; 
+
+  background: linear-gradient(to bottom, var(--clr-light), transparent);
+
+  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  mask-composite: exclude;
+  -webkit-mask: 
+    linear-gradient(#fff 0 0) content-box, 
+    linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+    mask-composite: exclude; 
+}
+
+@media screen and (min-width: 35rem) {
+  .card--side {
+    scale: .95;
+  }
+}
+
+.card__img {
+  max-width: 100%;
+}
+
+@media screen and (max-width: 35rem) {
+  .card__img {
+    max-width: 70%;
+    margin: auto;
+  }
+}
+
+.card__title {
+  font-size: min(5vw, var(--fs-h4));
+  font-weight: var(--fw-bold);
+
+  padding-bottom: 2rem;
+}
+
+.card__desc {
+  padding-inline: 1rem;
+}
+
+/* Our Services end */
+
+/* Products */
+/* Products - end */
+
+
+/* Contact us */
+.section--contact {
+  padding-block: 5rem;
+}
+
+.bg_img--contacts {
+  background-image: url(./img/backgrounds/abstract_blue_2.png);
+  min-height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .contact-form {
